--- a/css/style.css
+++ b/css/style.css
@@ -1347,3 +1347,40 @@ input[type="text"] {
     top: 80px;
   }
 }
+
+/* visitor counter banner */
+html,
+body {
+  margin: 0;
+}
+
+.banner {
+  /* background: #009579; */
+  background: #01B0D3;
+}
+
+.banner__content {
+  padding: 5px;
+  max-width: 300px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.banner__text {
+  flex-grow: 1;
+  line-height: 1;
+  margin-top: 18px;
+  /* font-family: 'Quicksand', sans-serif; */
+}
+
+.banner__close {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.banner__text,
+.banner__close>span {
+  color: #FFFFFF;
+}
