--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #E98074;
+  color: #007CC7;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #E98074;
+  color: #007CC7;
   outline: none;
   text-decoration: none;
 }
@@ -71,17 +71,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #E98074;
+  background: #007CC7;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #E98074;
+  background: #007CC7;
 }
 
 ::selection {
   color: #fff;
-  background: #E98074;
+  background: #007CC7;
 }
 
 #fh5co-header,
@@ -103,7 +103,7 @@ h1, h2, h3, h4, h5, h6, figure {
   /* background: rgba(255, 144, 0, 0.9); */
   /* background: rgba(43, 103, 119, 1); */
   /* background: #242333; */
-  background-image: linear-gradient(#44318D, #E98074, #FFFF);
+  background-image: linear-gradient(#12232E, #007CC7, #FFFF);
   /* background-image: linear-gradient(#242333, #01B0D3, #FFFF); */
 }
 #fh5co-header .display-t,
@@ -227,7 +227,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-features {
   /* background: #01B0D3; */
-  background-image: linear-gradient(#FFFF, #E98074, #44318D);
+  background-image: linear-gradient(#FFFF, #007CC7, #12232E);
   /* background-image: linear-gradient(#FFFF, #01B0D3, #242333); */
 }
 #fh5co-features h2 {
@@ -263,7 +263,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: table-cell;
   vertical-align: middle;
   height: 100px;
-  color: #E98074 !important;
+  color: #007CC7 !important;
 }
 #fh5co-features .feature-left .feature-copy {
   width: 100%;
@@ -314,7 +314,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-bg-dark {
   background: #2F3C4F;
-  background: #E98074;
+  background: #007CC7;
 }
 .fh5co-bg-dark .fh5co-heading h2 {
   color: #fff !important;
@@ -371,7 +371,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #E98074;
+  color: #007CC7;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -408,7 +408,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 20px;
 }
 #fh5co-about .fh5co-social-icons li a:hover {
-  background: #E98074;
+  background: #007CC7;
 }
 
 .fh5co-heading {
@@ -538,7 +538,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 40px;
   left: 50%;
   margin-left: -21px;
-  background-color: #E98074;
+  background-color: #007CC7;
   z-index: 100;
   display: table;
   -webkit-border-radius: 50%;
@@ -807,7 +807,7 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 54px;
   border: none !important;
   /* background: #fff; */
-  background: #E98074;
+  background: #007CC7;
   /* color: #01B0D3; */
   color: #fff;
   font-size: 16px;
@@ -1119,9 +1119,9 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #E98074;
+  background: #007CC7;
   color: #fff;
-  border: 2px solid #E98074;
+  border: 2px solid #007CC7;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #ff9b1a !important;
@@ -1129,11 +1129,11 @@ input[type="text"] {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #E98074;
-  border: 2px solid #E98074;
+  color: #007CC7;
+  border: 2px solid #007CC7;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #E98074;
+  background: #007CC7;
   color: #fff;
 }
 
@@ -1263,7 +1263,7 @@ input[type="text"] {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #E98074;
+  border-color: #007CC7;
 }
 
 .row-pb-md {
@@ -1358,7 +1358,7 @@ body {
 
 .banner {
   /* background: #009579; */
-  background: #d83f87;
+  background: #4DA8DA;
 }
 
 .banner__content {
